--- a/dragon.html
+++ b/dragon.html
@@ -19,6 +19,7 @@
             <div class="face__horn"></div>
             <div class="face__horn face__horn-r"></div>
             <div class="face__eye"></div>
+            <div class="face__eye face__eye-r"></div>
         </div>
         <div class="body">
             <div class="body__stomach"></div>
@@ -32,13 +33,6 @@
         <div class="leg"></div>
         <div class="leg leg-r"></div>
     </div>
-    <script>
-        const wingl = document.querySelector('wing');
-        let anims = 'animation';
-        wingl.addEventLisner('click', anim);
-        function anim(event) {
-            event.target.classList.add(anims);
-        }
-    </script>
 </body>
+
 </html>
